cabal-version:      2.4
name:               project-sahara
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Greg
maintainer:         greg.nwosu@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    project-sahara
  exposed-modules:
    ProjectSahara
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx
                     , plutus-tx-plugin
                     , random >= 1.2.0
                     , random-shuffle
                     , text
  hs-source-dirs:   src
  default-language: Haskell2010
